# iot_server

./: .env.example  .gitignore  Dockerfile  README.md  client.py  docker-compose.yml  pyproject.toml  start_serial_forward.sh
grafana/dashboards/: iot-dashboard.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasource.yml
src/iot_server/: __init__.py  main.py  settings.py  udp_handler.py
src/iot_server/classes/: __init__.py  serial_uart.py  udp_handler.py
src/iot_server/database/: __init__.py  mongodb.py
